--- a/Manuscript/references.bib
+++ b/Manuscript/references.bib
@@ -98,4 +98,16 @@ But we cannot even imagine how many factors a single honeybee takes into account
   publisher = {Elsevier},
 }
 
+@Article{Traulsen2006,
+  author    = {Traulsen, Arne and Nowak, Martin A and Pacheco, Jorge M},
+  journal   = {Physical Review E—Statistical, Nonlinear, and Soft Matter Physics},
+  title     = {Stochastic dynamics of invasion and fixation},
+  year      = {2006},
+  number    = {1},
+  pages     = {011909},
+  volume    = {74},
+  publisher = {APS},
+}
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
