--- a/Manuscript/references.bib
+++ b/Manuscript/references.bib
@@ -107,6 +107,28 @@ But we cannot even imagine how many factors a single honeybee takes into account
   pages     = {011909},
   volume    = {74},
   publisher = {APS},
+
+}
+
+@article{imhof2006evolutionary,
+  title={Evolutionary game dynamics in a Wright-Fisher process},
+  author={Imhof, Lorens A and Nowak, Martin A},
+  journal={Journal of mathematical biology},
+  volume={52},
+  pages={667--681},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{lessard2007probability,
+  title={The probability of fixation of a single mutant in an exchangeable selection model},
+  author={Lessard, Sabin and Ladret, V{\'e}ronique},
+  journal={Journal of Mathematical Biology},
+  volume={54},
+  number={5},
+  pages={721--744},
+  year={2007},
+  publisher={Springer}
 }
 
 
