--- a/Manuscript/GBF_Nat_02.tex
+++ b/Manuscript/GBF_Nat_02.tex
@@ -173,6 +173,7 @@ We can get different conditions from this equation and graph.
 (3) Bi-stability: A condition where all $a$ and $b$ will be stable means a strategy will get an advantage if it is abundant. For example, if strategy $a$ is abundant then the inequality will be $f_a>f_b$ and if it becomes rare then the inequality will be $f_a<f_b$ and there will be a saturation point when $f_a=f_b$. For this condition, the player should play the strategy its opponent is playing.
 (4) Neutrality: Now we have one condition in which both strategies will have the same impact. It does not depend on the change on the strategy. The equation for this strategy will be $f_a=f_b$. We mentioned this neutrality condition as a saturation point before\cite{Gokhale2011}.
 
+\cha{This is great! Here, I would analyse the 4 ( rather 3) different games with specific entries of the payoffs, calculate the equilibria and plot them. E.g. show the results in figures for the prisoners dilemma, chicken game and the snowdrift game}
 
 
 \subsubsection{Two player games with multiple strategies}
@@ -205,6 +206,8 @@ We can write this equation as,
 and the average fitness of a population is given by
 \[\bar{f}=x_1f_1+x_2f_2+.....+x_nf_n= \sum_{i=1}^{n}x_if_i \]
 
+
+\cha{Similar to above .. now I would move to a specific example... analyse the rock paper scissors game. calculate the equilibrium dynamics. How does the stability change according to the magnitudes and asymmetries of the payoffs?}
 
 
 \section{Probabilistic Dynamics}
@@ -283,6 +286,7 @@ Let's solve this equation.
 \[=\rho_a(\prod_{i=1}^{N-1}R_i)\]
 
 
+\cha{I like the use of $R_j$ as it makes some of the notations quite nice! Next, I would try to simulate the process by starting with a single player of a second strategy and $N-1$ of the first. For the same three games as you would have explored in the two-player two strategy case see what happens as you change the selection intensity. On the graphs then, plot the analytical expression of starting with a single mutant as a line and plot the simulatio results as dots.}
 
 
 
