--- a/Manuscript/GBF_Nat_02.tex
+++ b/Manuscript/GBF_Nat_02.tex
@@ -286,7 +286,7 @@ Let's solve this equation.
 \[=\rho_a(\prod_{i=1}^{N-1}R_i)\]
 
 
-\cha{I like the use of $R_j$ as it makes some of the notations quite nice! Next, I would try to simulate the process by starting with a single player of a second strategy and $N-1$ of the first. For the same three games as you would have explored in the two-player two strategy case see what happens as you change the selection intensity. On the graphs then, plot the analytical expression of starting with a single mutant as a line and plot the simulatio results as dots.}
+\cha{I like the use of $R_j$ as it makes some of the notations quite nice! Next, I would try to simulate the process by starting with a single player of a second strategy and $N-1$ of the first. See what happens when you change the selection intensity for the same three games you would have explored in the two-player two strategy case. On the graphs, plot the analytical expression starting with a single mutant as a line and plot the simulation results as dots.}
 
 
 
