--- a/Manuscript/GBF_Nat_02.tex
+++ b/Manuscript/GBF_Nat_02.tex
@@ -189,7 +189,7 @@ Let's try to write the payoff matrix,
     \text{Defect (D)} & (T,S) = (5,0) & (P,P) = (1,1)
 \end{array}
 \]
-The general and standard condition for prisoner' dilemma is T>R>S>P.\\
+The general and standard condition for prisoner' dilemma is T>R>P>S.\\
 As mentioned in the replicator dynamics section, there will be three points where the value of $dx/dt$ will be $0$. The three conditions are $x=0$ , it means only defectors and $x=1$, it means only cooperators, these two are boundary points.\\
 The internal equilibrium will fulfil the condition of $f_c=f_d$.Let's find the equilibrium point by putting the payoff values\\
 \[xR+(1-x)S= xT+(1-x)P\]
