--- a/Manuscript/GBF_Nat_02.tex
+++ b/Manuscript/GBF_Nat_02.tex
@@ -201,7 +201,7 @@ Since, the boundary points are ${0,1}$, there can not exist any internal equilib
 We can plot the graph using Python for the Prisoner's dilemma dynamics.\\
 \begin{figure}{h}
     \centering
-      %\includegraphics[width=0.5\linewidth]{Prisoner's dilemma plot.pdf}
+      \includegraphics[width=0.5\linewidth]{Prisoner's dilemma plot.pdf}
     \caption{Prisoner's Dilemma Dynamics}
     \label{fig: Replicator Dynamics for Prisoner' Dilemma}
 \end{figure}
@@ -233,7 +233,7 @@ This implifies that over time $1/3$ of the population will swerve and $2/3$ of t
 Let's try to plot it.\\
 \begin{figure}{h}
     \centering
-    %\includegraphics[width=0.5\linewidth]{chicken game plot.pdf}
+    \includegraphics[width=0.5\linewidth]{chicken game plot.pdf}
     \caption{Chicken Game Dynamics}
     \label{fig: Replicator dynamics for Chicken Game}
 \end{figure}
